# reviews-rs

./: Cargo.toml
src/: main.rs
src/domain/: mod.rs  submission_request.rs  submission_response.rs
src/ports/: reviews.rs
src/presentation/: api.rs  kafka.rs
