[package]
name = "bv-reviews"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
clap = "4.2.7"
rdkafka = { version = "0.31.0", features = ["tokio"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.163", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
validator = { version = "0.15", features = ["derive"] }

[dev-dependencies]
mockito = "0.26.0"
